--- a/package.json
+++ b/package.json
@@ -7,5 +7,14 @@
   },
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "@babel/cli": "^7.24.7",
+    "@babel/core": "^7.24.7",
+    "@babel/preset-env": "^7.24.7",
+    "@babel/preset-typescript": "^7.24.7",
+    "@types/node": "^20.14.10",
+    "ts-node": "^10.9.2",
+    "typescipt": "^1.0.0"
+  }
 }
